Cambios links http a https.

--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <title>Página no encontrada - SteamBuy</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="http://steambuy.com.ar/favicon.ico?2"> 
+    <link rel="shortcut icon" href="https://steambuy.com.ar/favicon.ico?2"> 
     <style type="text/css">
 	.box
 	{
@@ -22,7 +22,7 @@
 
 <body style="background:url(http://i.imgur.com/GLw7CYA.jpg);">
 
-	<div class="alert alert-info box"><h4>Ups! Parece que te has perdido, <a href="http://steambuy.com.ar/">haz click aquí</a> para volver a la página principal.</h4></div>
+	<div class="alert alert-info box"><h4>Ups! Parece que te has perdido, <a href="https://steambuy.com.ar/">haz click aquí</a> para volver a la página principal.</h4></div>
 
 </body>
 </html>
