--- a/soporte/preguntas-frecuentes/resources/faq.html
+++ b/soporte/preguntas-frecuentes/resources/faq.html
@@ -75,7 +75,7 @@
 	</div>
 	<div id="estado-de-mi-pedido" class="panel-collapse collapse">
 		<div class="panel-body">
-        	Puedes revisar en la sección <a href="http://steambuy.com.ar/pedido/">Mi Pedido</a> para ver información detallada de tu pedido: el estado del pago, la información del envío, información del producto, y más detalles.<br/>
+        	Puedes revisar en la sección <a href="https://steambuy.com.ar/pedido/">Mi Pedido</a> para ver información detallada de tu pedido: el estado del pago, la información del envío, información del producto, y más detalles.<br/>
             Para esto necesitarás el <strong>ID</strong> y <strong>clave del pedido</strong>, estos datos se envían por e-mail al momento de generar un pedido.
         </div>
 	</div>
