Agregada guía con fotos de cómo usar el formulario de compra.

--- a/soporte/preguntas-frecuentes/resources/faq.html
+++ b/soporte/preguntas-frecuentes/resources/faq.html
@@ -40,6 +40,33 @@
 
 <div class="panel panel-default">
 	<div class="panel-heading">
+		<h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#como-comprar-juego-formulario" name="como-comprar-juego-formulario">¿Cómo compro/cotizo un juego de Steam?</a></h4>
+	</div>
+	<div id="como-comprar-juego-formulario" class="panel-collapse collapse">
+		<div class="panel-body">
+			Esto se hace desde el formulario de compras, ubicado en la <a href="<?php echo ROOT_LEVEL; ?>" target="_blank">página principal</a>.<br/>
+			Se deben seguir los siguientes pasos:<br/><br/>
+			<ol style="line-height: 1.4em;">
+				<li>Dirigite a la <a href="https://store.steampowered.com/" target="_blank">tienda de Steam</a>, buscá y hacé click en el juego que querés comprar.</li>
+				<img src="resources/img/form1.jpg" style="width: 800px; margin: 10px  0 20px">
+				<li>Copiá la URL del producto.</li>
+				<img src="resources/img/form2.jpg" style="width: 800px; margin: 10px  0 20px">
+				<li>En el <a href="<?php echo ROOT_LEVEL; ?>" target="_blank">formulario de compra</a>, en el campo "URL de juego en Steam" pegá la URL. El precio final en pesos argentinos se va a calcular y mostrar automáticamente.</li>
+				<img src="resources/img/form3.jpg" style="width: 800px; margin: 10px  0 20px">
+				<li>Si deseás comprar el juego, completá los demás campos con tus datos de contacto y la URL de tu cuenta de Steam que recibirá el juego. Podés ver tu URL de cuenta de Steam <a href="https://steamcommunity.com/my/profile" target="_blank">acá</a>.</li>
+				<li>Presioná el botón para realizar el pedido. Se generará una boleta o cupón de pago por el monto indicado.</li>
+				<li>Imprimí o llevá una foto de la boleta a cualquier sucursal de pago y aboná antes del vencimiento de la boleta.</li>
+				<li>El pedido se enviará entre el día que se acredita el pago y hasta 2 días después.</li>
+			</ol>
+
+		</div>
+	</div>
+</div>
+
+
+
+<div class="panel panel-default">
+	<div class="panel-heading">
 		<h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#como-funcionan-las-ofertas" name="como-funcionan-las-ofertas">¿Cómo se compra con oferta de Steam?</a></h4>
 	</div>
 	<div id="como-funcionan-las-ofertas" class="panel-collapse collapse">
