--- a/soporte/preguntas-frecuentes/resources/faq.html
+++ b/soporte/preguntas-frecuentes/resources/faq.html
@@ -7,7 +7,7 @@
 		<h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#c1" name="1">¿Qué es SteamBuy?</a></h4>
 	</div>
 	<div id="c1" class="panel-collapse collapse">
-		<div class="panel-body">SteamBuy es una tienda web donde encontrarás variedad de videojuegos digitales para PC y con medios de pago accesibles y alternativos. Proporcionamos ofertas y promociones de otros sitios ofreciendo venta a pedido de Steam, Amazon y otros sitios, también poseemos abundantes ofertas propias.</div>
+		<div class="panel-body">SteamBuy es un sitio web que ofrece el servicio de reventa de juegos de la tienda de Steam con medios de pago en efectivo (Rapipago, Pago Fácil, Cobroexpress, Provincia NET, etc). Los precios se reflejan según los precios en Steam, es decir que vendemos con descuento los juegos en caso que Steam aplique ofertas.</div>
 	</div>
 </div>
 <div class="panel panel-default">
